--- a/src/app/pages/claim-entry-details/claim-entry-details.page.html
+++ b/src/app/pages/claim-entry-details/claim-entry-details.page.html
@@ -50,7 +50,7 @@
    <ion-item class="text-size-xs ion-text-wrap ion-text-left" *ngIf="show_km" (ionBlur)="CalcKMAmont();" >
     <ion-label class="text-size-xs" position="floating">
       Kilometers</ion-label>
-      <ion-input type="number" [(ngModel)]="kilometers" [disabled]="isEnabled"></ion-input> 
+      <ion-input type="number" [(ngModel)]="kilometers" [disabled]="isEnabledkm"></ion-input> 
    </ion-item> 
 
    <ion-item class="text-size-xs ion-text-wrap ion-text-left" *ngIf="show_place">
